// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConferenceInfoList renders conference link 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      Contribution to: 
    </span>
    <ul>
      <li>
        <span>
          <a
            data-test-id="literature-conference-link"
            href="/conferences/111111"
          >
            Test Conferece 2
          </a>
        </span>
        , 
      </li>
      <li>
        <span>
          <a
            data-test-id="literature-conference-link"
            href="/conferences/222222"
          >
            Test Conferece 2
          </a>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ConferenceInfoList renders contribution label if document type is other than proceedings 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      Contribution to: 
    </span>
    <ul>
      <li>
        <span>
          <a
            data-test-id="literature-conference-link"
            href="/conferences/111111"
          >
            Test Conferece 2
          </a>
        </span>
        , 
      </li>
      <li>
        <span>
          <a
            data-test-id="literature-conference-link"
            href="/conferences/222222"
          >
            Test Conferece 2
          </a>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ConferenceInfoList renders proceedings label if document type is proceedings 1`] = `
<DocumentFragment>
  <div
    class="__InlineList__"
    data-testid="inline-data-list"
  >
    <span
      class=""
    >
      Proceedings of: 
    </span>
    <ul>
      <li>
        <span>
          <a
            data-test-id="literature-conference-link"
            href="/conferences/111111"
          >
            Test Conferece 2
          </a>
        </span>
        , 
      </li>
      <li>
        <span>
          <a
            data-test-id="literature-conference-link"
            href="/conferences/222222"
          >
            Test Conferece 2
          </a>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
